--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ const DEFAULT_PRODUCTS=[
   {name:'Tavuk Burger',birim:'Kg'},{name:'Tenders',birim:'Kg'},
   {name:'Patates',birim:'Kg'},{name:'Nugget',birim:'Kg'},
   {name:'Soğan Halkası',birim:'Kg'},{name:'Çıtır Tavuk',birim:'Kg'},
-  {name:'Stick Peynir',birim:'Adet'},{name:'Karamelize Soğan',birim:'Kg'},
+  {name:'Stick Peynir',birim:'Kg'},{name:'Karamelize Soğan',birim:'Kg'},
   {name:'Füme',birim:'Kg'},{name:'Kızartma Yağı',birim:'Lt'},
   {name:'80 gr Ekmek',birim:'Adet'},{name:'Mini Ekmek',birim:'Adet'},
   {name:'Kutu İçecekler',birim:'Adet'},{name:'Soda Grubu',birim:'Adet'},
