--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
 </head>
 <body>
 <div id="brand-watermark">YPC.TECNO</div>
-<div id="brand-footer"><span class="bf-logo">YPC.TECNO</span><span class="bf-sep">●</span><span class="bf-sub">Ufuk Yapıcı</span><span class="bf-sep">●</span><span class="bf-sub">YAZILIM GELİŞTİRİCİ</span></div>
+<div id="brand-footer"><span class="bf-logo">YPC.TECNO</span><span class="bf-sep">●</span><span class="bf-sub">Ufuk Yapıcı</span></div>
 <div id="auth-screen">
   <div class="auth-card">
     <div class="auth-logo">ERCAN BRGR</div>
