--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
 }
 .print-only{display:none}
 #brand-watermark{display:none}
-#brand-footer{position:fixed;bottom:0;left:0;right:0;height:26px;background:linear-gradient(135deg,#1a1a2e 60%,#2d1a0e);display:flex;align-items:center;justify-content:center;gap:8px;z-index:50;pointer-events:none;user-select:none;border-top:1px solid rgba(232,93,4,0.35)}
+#brand-footer{position:fixed;bottom:0;left:0;right:0;height:26px;background:linear-gradient(135deg,#1a1a2e 60%,#2d1a0e);display:flex;align-items:center;justify-content:space-between;padding:0 14px;z-index:50;pointer-events:none;user-select:none;border-top:1px solid rgba(232,93,4,0.35)}
 #brand-footer .bf-logo{font-size:11px;font-weight:900;color:#FFB800;letter-spacing:2px}
 #brand-footer .bf-sep{color:rgba(255,184,0,0.35);font-size:9px}
 #brand-footer .bf-sub{font-size:9px;color:rgba(255,184,0,0.45);letter-spacing:1px}
@@ -240,7 +240,7 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
 </head>
 <body>
 <div id="brand-watermark">YPC.TECNO</div>
-<div id="brand-footer"><span class="bf-logo">YPC.TECNO</span><span class="bf-sep">●</span><span class="bf-sub">Ufuk Yapıcı</span></div>
+<div id="brand-footer"><span class="bf-logo">YPC.TECNO</span><span class="bf-sub">Ufuk Yapıcı</span></div>
 <div id="auth-screen">
   <div class="auth-card">
     <div class="auth-logo">ERCAN BRGR</div>
