--- a/index.html
+++ b/index.html
@@ -410,7 +410,8 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
 <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/xlsx-js-style@1.2.0/dist/xlsx.bundle.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4/dist/chart.umd.min.js"></script>
-<script>
+<script>window.onerror=function(msg,src,line,col,err){var d=document.getElementById('giris-err');if(d){d.style.color='#e74c3c';d.textContent='JS HATA: '+msg+' (satir:'+line+')';d.style.display='block';}return false;};if(typeof supabase==='undefined'){document.addEventListener('DOMContentLoaded',function(){var d=document.getElementById('giris-err');if(d){d.style.color='#e74c3c';d.textContent='CDN yuklenemedi - internet baglantinizi kontrol edin';d.style.display='block';}});}
+
 const SUPA_URL='https://gqhfxpczgxksbfybfesz.supabase.co';
 const SUPA_KEY='sb_publishable_0L6Pcm4GYzaEyIQ8Dup-6A_LqT-Z-FS';
 const {createClient}=supabase;
